# ua-datasets

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  404.html  CITATION.cff  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  tomllib.py
.github/workflows/: build_docs.yml  ci.yml  release.yml  run_tests.yml
citation/: index.html
docs/: citation.md  examples  imgs  index.md
docs/further_details/: acknowledgements.md  benchmarks.md
examples/: mova_pos.md  ua_news.md  ua_squad.md
examples/mova_pos/: index.html
examples/ua_news/: index.html
examples/ua_squad/: index.html
further_details/acknowledgements/: index.html
further_details/benchmarks/: index.html
search/: search_index.json
test/: conftest.py
test/test_question_answering/: conftest.py  test_uasquad.py  test_uasquad_core.py  test_uasquad_hardening.py
test/test_text_classification/: conftest.py  test_cl.py  test_classification.py  test_news_dataset_hardening.py
test/test_token_classification/: conftest.py  test_pos_dataset_hardening.py  test_token.py
ua-datasets/: __init__.py  classification_dataset.py  dataset_utils.py  part_of_speech.py  question_answering.py  squad_question_answering.py  uasquad_question_answering.py
ua-datasets/src/question_answering/: squad_question_answering.py
ua-datasets/src/text_classification/: __init__.py  text_classification.py
ua-datasets/src/token_classification/: __init__.py  part_of_speech.py
ua_datasets/: __init__.py  utils.py
ua_datasets/question_answering/: __init__.py  uasquad_question_answering.py  utils.py
ua_datasets/src/: __init__.py
ua_datasets/src/question_answering/: README.md  __init__.py  uasquad_question_answering.py  utils.py
ua_datasets/src/text_classification/: README.md  __init__.py  text_classification.py
ua_datasets/src/token_classification/: README.md  __init__.py  part_of_speech.py
ua_datasets/text_classification/: __init__.py  news_classification.py
ua_datasets/token_classification/: __init__.py  part_of_speech.py
