[project]
name = "ua-datasets"
version = "0.0.23"
description = "A collection of ukrainian language datasets"
readme = "README.md"
requires-python =">=3.7.0"
license = {file = "LICENSE"}
authors = [
  {name = "FIdo AI", email = "ivanyuk.skulskiy@ukma.edu.ua"},
]
keywords = ["ua-datasets"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: Ukrainian",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]
urls = {repository = "https://github.com/fido-ai/ua-datasets" }
dependencies = []
