[project]
name = "ua-datasets"
version = "1.0.0"
description = "A collection of ukrainian language datasets"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "FIdo AI", email = "ivanyuk.skulskiy@ukma.edu.ua"},
]
keywords = ["ua-datasets"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: Ukrainian",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls = {repository = "https://github.com/fido-ai/ua-datasets" }
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ua_datasets*"]

[tool.setuptools.package-data]
"*" = [
    "README.md",
    "LICENSE",
    "CITATION.cff",
    "assets/*"
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=2.21.0",
    "pytest>=7.4.4",
    "ruff>=0.14.2",
    "uv-sort>=0.6.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "B", "C4", "SIM", "PT", "RUF"]
ignore = [
    # Example: "E501"  # managed by formatter if enabled
]

[tool.ruff.lint.isort]
known-first-party = ["ua_datasets"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
packages = ["ua_datasets"]
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
